[metadata]
name = raptor
version = attr: raptor.__version__
description = Raptor Flask API Wrapper
author = Hendrik Boeck <hendrikboeck.dev@protonmail.com>

classifiers =
  Enviornment :: Console
  Operating System :: POSIX :: Linux
  Programming Language :: Python

[options]
zip_safe = False
include_package_data = False
python_requires = >= 3.6
install_requires =
  flask >= 2.0.1
  flask_cors>=3.0.10
  werkzeug >= 2.0.1
  yapf >= 0.31.0
  pytest >= 6.2.5
  setuptools >= 44.0.0
  waitress >= 2.1.2


[sdist]
formats = gztar

[clean]
all = 1

[zest.releaser]
python-file-with-version = raptor/__init__.py
push-changes = no
tag-format = {version}
tag-message = raptor {version}
tag-signing = yes

[catchlog]
log_level = DEBUG